# hermes-agent

./: .dockerignore  .env.docker.example  .env.enterprise.example  .env.example  .env.github-pages.example  .env.production  .env.production.complete  .env.template  .env.tts.example  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  =1.3.0  ARCHITECTURE_ANALYSIS.md  BETA_LAUNCH_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_IMPROVEMENTS.md  CONTRIBUTING.md  COPILOT_PROMPT.md  COST_ESTIMATION.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PREREQUISITES.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.production  FINAL_SUBMISSION_REPORT.md  GITHUB_ISSUE_PROJECT_CLEANUP.md  HABITFLOW_MONETIZATION.md  HABIT_TRACKER_README.md  IMMEDIATE_LAUNCH_ACTIONS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  LICENSE  (+69 more)
.claude/commands/: analyze-performance.md  generate-tests.md  review-security.md
.github/: claude.yml  dependabot.yml  pull_request_template.md  security-config.yml
.github/ISSUES/: 01-docker-containerization.md  02-testing-infrastructure.md
.github/ISSUE_TEMPLATE/: 01-docker-containerization.md  02-testing-infrastructure.md  03-type-hint-coverage.md  04-dependency-management.md  05-ci-cd-improvements.md  06-code-review-process.md
.github/workflows/: README.md  ci.yml  consolidated-ci.yml  deploy-pages.yml  deploy-production.yml  docs-compliance.yml  main.yml  monitoring.yml  pages-validation.yml  security-compliance.yml  security-monitor.yml  site-monitoring.yml  test.yml
alembic/versions/: 001_auth_schema.py  002_clio_tokens.py  003_marketing_tables.py
api/: package.json
api/stripe/: create-checkout-session.ts  create-portal-session.ts  webhook.ts
backend/: Dockerfile  package.json  server.js  test.js
backend/openapi/: openapi.yaml
backend/routes/: clio.js  twilio.js
backend/services/: clioService.js
db/: habit_tracker_schema.sql  subscriptions_schema.sql
db/sql/: 002_clio_tokens.sql
deployment/: deploy.sh  requirements.txt  setup-secrets.sh
docker/: entrypoint.sh  healthcheck.sh
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docs/: ARCHITECTURE.md  CI_CD_TROUBLESHOOTING_ANALYSIS.md  COMPARISON.md  ISSUE_SUMMARY.md  LEGAL_AI_USER_GUIDE.md  MIGRATION_GUIDE.md  PERFORMANCE_METRICS.md  README.md  SAAS_TRANSFORMATION_SUMMARY.md  SECURITY_IMPLEMENTATION_REPORT.md  api.md  architecture.md  authentication-multi-tenant-isolation.md  billing.md  clio-setup.md  deployment.md  environment-variables.md  hermes-voice-nlp.md  index.html  issue-resolution-summary.md  legal-compliance.md  mcp-integration.md  mcp-setup.md  supabase-setup.md  user-manual.md  voice-pipeline-complete.md  voice-pipeline-setup.md
docs/services/: gcp-secret-manager-setup.md  openai-setup.md  redis-setup.md  stripe-setup.md  supabase-setup.md
examples/: quick_start.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  main.jsx
hermes/: __init__.py  auxiliary_services.py  config.py  event_streaming.py  main.py  speech_to_text.py  text_to_speech.py  voice_pipeline.py  websocket_handler.py
hermes/analytics/: __init__.py  engine.py
hermes/api/: __init__.py  analytics_endpoints.py  auth_endpoints.py  billing_endpoints.py  clio_endpoints.py  leads_endpoints.py  marketing_analytics_endpoints.py  performance_endpoints.py  security_endpoints.py  social_endpoints.py  webhooks_endpoints.py
hermes/audit/: __init__.py  api.py
hermes/auth/: __init__.py  api_key_auth.py  jwt_handler.py  middleware.py  models.py  rbac.py  repository.py  tenant_manager.py
hermes/automation/: playwright_manager.py  workflows.py
hermes/billing/: __init__.py  enterprise_pricing.py  stripe_billing.py
hermes/cache/: __init__.py  tenant_cache_manager.py
hermes/database/: __init__.py  connection.py  models.py  optimized_connection.py  security.py  tenant_context.py
hermes/integrations/: __init__.py  legal_databases.py
hermes/knowledge/: graph_sync.py
hermes/mcp/: __init__.py  database_optimizer.py  documentation_generator.py  knowledge_integrator.py  orchestrator.py
hermes/middleware/: __init__.py  security.py
hermes/monitoring/: __init__.py  enhanced_metrics.py  health_checks.py  metrics.py  performance_instrumentation.py  production_dashboard.py
hermes/optimization/: __init__.py  memory_manager.py
hermes/performance/: __init__.py  advanced_benchmarks.py  benchmarks.py  performance_suite.py  production_validator.py
hermes/reasoning/: __init__.py  citation_graph.py  legal_reasoning_engine.py  models.py  monte_carlo.py  tree_of_thought.py
hermes/resilience/: __init__.py  circuit_breaker.py  dead_letter_queue.py  retry.py
hermes/scaling/: __init__.py  auto_scaler.py
hermes/tts/: factory.py  (+5 more)
kaggle/: COPY_PASTE_SUBMISSION.md  KAGGLE_SUBMISSION_GUIDE.md  LEGAL_AI_DEMO.ipynb  README.md  READY_TO_SUBMIT.txt  SOCIAL_MEDIA_POSTS.md  SUBMISSION_SUMMARY.md  VALIDATION_REPORT.md
monitoring/: gcp-monitoring-config.yaml
nginx/: README.md  nginx.conf
scripts/: deploy-gcp.sh  deploy-production.sh  docker-build.sh  docker-clean.sh  docker-logs.sh  docker-start.sh  docker-stop.sh  generate-secrets.sh  manage-secrets.sh  production_validation.py  setup-monitoring.sh  setup-vpc-connector.sh  upload-secrets.sh  validate-production.sh  validate-security.py  verify-deployment.sh
static/: demo.html  manifest.json  sw.js
templates/: dashboard.html
tests/: README.md  conftest.py  e2e_test_suite.py  test_billing_stripe.py  test_config_security.py  test_documentation_generator.py  test_event_streaming.py  test_fixtures_verification.py  test_lawpay_integration.py  test_legal_reasoning.py  test_main_metrics_endpoints.py  test_mcp_orchestrator.py  test_mem0_integration.py  test_monitoring_metrics.py  test_reasoning_engine.py  test_resilience_patterns.py  test_voice_pipeline.py  test_zapier_integration.py
(+100 files in other folders)
