[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.1.0"
description = "High-performance Enterprise Reception & Matter Engagement System for Legal Tech"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HERMES Development Team"},
]
keywords = ["legal", "ai", "voice", "law-firm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Topic :: Office/Business :: Financial :: Accounting",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["hermes"]
known_third_party = ["fastapi", "pydantic", "redis", "openai"]

[tool.mypy]
python_version = "3.11"
# Strict mode settings for better type safety
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
# Show error codes for easier debugging
show_error_codes = true
# Enable incremental mode for faster checks
incremental = true

# Third-party library overrides (no type stubs available)
[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "torch.*",
    "torchaudio.*",
    "scipy.*",
    "sklearn.*",
    "transformers.*",
    "mem0ai.*",
    "playwright.*",
    "supabase.*",
    "postgrest.*",
    "zapier_platform_cli.*",
]
ignore_missing_imports = true

# Gradual strict mode adoption - start with core modules
# Remove these overrides as type hints are added
[[tool.mypy.overrides]]
module = [
    "hermes.integrations.*",
    "hermes.automation.*",
    "hermes.mcp.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=hermes",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
    "smoke: marks tests as smoke tests",
]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.run]
source = ["hermes"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/scripts/*",
    "*/deployment/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used test

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "missing-docstring",
    "import-error",
]

[tool.vulture]
min_confidence = 80
paths = ["hermes"]
exclude = ["tests/", ".venv/", "venv/"]